# LinkNebula

./: Cargo.toml  README.md  build.rs
client/: Cargo.toml
client/src/: discovery.rs  main.rs  sensor_driver.rs  service_client.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/hal/: bearpi_hi2821.rs  mod.rs  simulator.rs
common/src/protocol/: beacon.rs  data.rs  mod.rs
common/src/utils/: aligned_buffer.rs  checksum.rs
forward/: Cargo.toml
forward/src/: main.rs
forward/src/directory/: election.rs  mod.rs  service_directory.rs
forward/src/routing/: dynamic_forwarding.rs  mod.rs
scripts/: build_all.sh  flash_client.sh  flash_forward.sh  flash_server.sh
server/: Cargo.toml
server/src/: main.rs
server/src/api/: cli.rs  mod.rs
server/src/storage/: circular_buffer.rs  mod.rs
tests/integration/: dynamic_config.rs  multi_hop.rs
tests/unit/: protocol_parsing.rs  routing_algorithm.rs  service_discovery.rs
